crates/emitter-hono/tests/snapshots/snapshots__snapshot_allof_conflict_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/entities': {
    $get: {
      input: {
      };
      output: Types.listEntitiesResponse;
    };
  };
};
