crates/emitter-hono/tests/snapshots/snapshots__snapshot_anyof_plain_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/search': {
    $post: {
      input: {
        json: Types.searchBody;
      };
      output: Types.searchResponse;
    };
  };
  '/notifications': {
    $get: {
      input: {
      };
      output: Types.listNotificationsResponse;
    };
  };
};
