crates/emitter-hono/tests/snapshots/snapshots__snapshot_coverage_gaps_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/items': {
    $get: {
      input: {
        query: Types.listItemsQueryParams;
      };
      output: Types.listItemsResponse;
    };
  };
  '/items/:itemId': {
    $get: {
      input: {
        param: Types.getItemPathParams;
      };
      output: Types.getItemResponse;
    };
  };
};
