crates/emitter-hono/tests/snapshots/snapshots__snapshot_edge_cases_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/no-operation-id': {
    $get: {
      input: {
      };
      output: Types.Get__no-operation-idResponse;
    };
  };
  '/empty-responses': {
    $post: {
      input: {
      };
      output: void;
    };
  };
  '/all-void': {
    $put: {
      input: {
        json: Types.replaceAllVoidBody;
      };
      output: void;
    };
    $delete: {
      input: {
      };
      output: void;
    };
  };
  '/no-param-schema': {
    $get: {
      input: {
        query: Types.noParamSchemaQueryParams;
      };
      output: Types.noParamSchemaResponse;
    };
  };
  '/deeply-nested': {
    $get: {
      input: {
      };
      output: Types.deeplyNestedResponse;
    };
  };
  '/only-error-response': {
    $get: {
      input: {
      };
      output: void;
    };
  };
  '/nullable-array': {
    $get: {
      input: {
      };
      output: Types.nullableArrayResponse;
    };
  };
  '/enum-only-response': {
    $get: {
      input: {
      };
      output: Types.enumOnlyResponseResponse;
    };
  };
  '/empty-object-body': {
    $post: {
      input: {
        json: Types.emptyObjectBodyBody;
      };
      output: Types.emptyObjectBodyResponse;
    };
  };
  '/text-response': {
    $get: {
      input: {
      };
      output: Types.textResponseResponse;
    };
  };
  '/blob-response': {
    $get: {
      input: {
      };
      output: void;
    };
  };
  '/multiple-success-codes': {
    $post: {
      input: {
        json: Types.multipleSuccessCodesBody;
      };
      output: Types.multipleSuccessCodesResponse;
    };
  };
};
