crates/emitter-hono/tests/snapshots/snapshots__snapshot_error_responses_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/users': {
    $get: {
      input: {
        query: Types.listUsersQueryParams;
      };
      output: Types.listUsersResponse;
    };
    $post: {
      input: {
        json: Types.createUserBody;
      };
      output: Types.createUserResponse;
    };
  };
  '/users/:userId': {
    $get: {
      input: {
        param: Types.getUserPathParams;
      };
      output: Types.getUserResponse;
    };
    $delete: {
      input: {
        param: Types.deleteUserPathParams;
      };
      output: void;
    };
  };
};
