crates/emitter-hono/tests/snapshots/snapshots__snapshot_header_cookie_params_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/resources': {
    $get: {
      input: {
        query: Types.listResourcesQueryParams;
      };
      output: Types.listResourcesResponse;
    };
  };
  '/resources/:resourceId': {
    $get: {
      input: {
        param: Types.getResourcePathParams;
      };
      output: Types.getResourceResponse;
    };
  };
};
