crates/emitter-hono/tests/snapshots/snapshots__snapshot_inline_schemas_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/status': {
    $get: {
      input: {
      };
      output: Types.getStatusResponse;
    };
  };
  '/echo': {
    $post: {
      input: {
        json: Types.echoBody;
      };
      output: Types.echoResponse;
    };
  };
  '/config': {
    $get: {
      input: {
      };
      output: Types.getConfigResponse;
    };
  };
  '/items/:itemId/history': {
    $get: {
      input: {
        param: Types.getItemHistoryPathParams;
      };
      output: Types.getItemHistoryResponse;
    };
  };
};
