crates/emitter-hono/tests/snapshots/snapshots__snapshot_large_scale_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/users': {
    $get: {
      input: {
        query: Types.listUsersQueryParams;
      };
      output: Types.listUsersResponse;
    };
    $post: {
      input: {
        json: Types.createUserBody;
      };
      output: Types.createUserResponse;
    };
  };
  '/users/:userId': {
    $get: {
      input: {
        param: Types.getUserPathParams;
      };
      output: Types.getUserResponse;
    };
    $put: {
      input: {
        param: Types.replaceUserPathParams;
        json: Types.replaceUserBody;
      };
      output: Types.replaceUserResponse;
    };
    $patch: {
      input: {
        param: Types.updateUserPathParams;
        json: Types.updateUserBody;
      };
      output: Types.updateUserResponse;
    };
    $delete: {
      input: {
        param: Types.deleteUserPathParams;
      };
      output: void;
    };
  };
  '/users/:userId/avatar': {
    $put: {
      input: {
        param: Types.uploadUserAvatarPathParams;
        json: Types.uploadUserAvatarBody;
      };
      output: Types.uploadUserAvatarResponse;
    };
    $delete: {
      input: {
        param: Types.deleteUserAvatarPathParams;
      };
      output: void;
    };
  };
  '/users/:userId/posts': {
    $get: {
      input: {
        param: Types.listUserPostsPathParams;
        query: Types.listUserPostsQueryParams;
      };
      output: Types.listUserPostsResponse;
    };
  };
  '/users/:userId/orders': {
    $get: {
      input: {
        param: Types.listUserOrdersPathParams;
        query: Types.listUserOrdersQueryParams;
      };
      output: Types.listUserOrdersResponse;
    };
  };
  '/users/:userId/notifications': {
    $get: {
      input: {
        param: Types.listUserNotificationsPathParams;
        query: Types.listUserNotificationsQueryParams;
      };
      output: Types.listUserNotificationsResponse;
    };
  };
  '/users/:userId/reviews': {
    $get: {
      input: {
        param: Types.listUserReviewsPathParams;
        query: Types.listUserReviewsQueryParams;
      };
      output: Types.listUserReviewsResponse;
    };
  };
  '/users/:userId/settings': {
    $get: {
      input: {
        param: Types.getUserSettingsPathParams;
      };
      output: Types.getUserSettingsResponse;
    };
    $put: {
      input: {
        param: Types.updateUserSettingsPathParams;
        json: Types.updateUserSettingsBody;
      };
      output: Types.updateUserSettingsResponse;
    };
  };
  '/posts': {
    $get: {
      input: {
        query: Types.listPostsQueryParams;
      };
      output: Types.listPostsResponse;
    };
    $post: {
      input: {
        json: Types.createPostBody;
      };
      output: Types.createPostResponse;
    };
  };
  '/posts/:postId': {
    $get: {
      input: {
        param: Types.getPostPathParams;
      };
      output: Types.getPostResponse;
    };
    $put: {
      input: {
        param: Types.replacePostPathParams;
        json: Types.replacePostBody;
      };
      output: Types.replacePostResponse;
    };
    $patch: {
      input: {
        param: Types.updatePostPathParams;
        json: Types.updatePostBody;
      };
      output: Types.updatePostResponse;
    };
    $delete: {
      input: {
        param: Types.deletePostPathParams;
      };
      output: void;
    };
  };
  '/posts/:postId/publish': {
    $post: {
      input: {
        param: Types.publishPostPathParams;
      };
      output: Types.publishPostResponse;
    };
  };
  '/posts/:postId/archive': {
    $post: {
      input: {
        param: Types.archivePostPathParams;
      };
      output: Types.archivePostResponse;
    };
  };
  '/posts/:postId/comments': {
    $get: {
      input: {
        param: Types.listPostCommentsPathParams;
        query: Types.listPostCommentsQueryParams;
      };
      output: Types.listPostCommentsResponse;
    };
    $post: {
      input: {
        param: Types.createPostCommentPathParams;
        json: Types.createPostCommentBody;
      };
      output: Types.createPostCommentResponse;
    };
  };
  '/posts/:postId/tags': {
    $get: {
      input: {
        param: Types.listPostTagsPathParams;
      };
      output: Types.listPostTagsResponse;
    };
    $put: {
      input: {
        param: Types.setPostTagsPathParams;
        json: Types.setPostTagsBody;
      };
      output: Types.setPostTagsResponse;
    };
  };
  '/comments': {
    $get: {
      input: {
        query: Types.listCommentsQueryParams;
      };
      output: Types.listCommentsResponse;
    };
  };
  '/comments/:commentId': {
    $get: {
      input: {
        param: Types.getCommentPathParams;
      };
      output: Types.getCommentResponse;
    };
    $patch: {
      input: {
        param: Types.updateCommentPathParams;
        json: Types.updateCommentBody;
      };
      output: Types.updateCommentResponse;
    };
    $delete: {
      input: {
        param: Types.deleteCommentPathParams;
      };
      output: void;
    };
  };
  '/comments/:commentId/replies': {
    $get: {
      input: {
        param: Types.listCommentRepliesPathParams;
        query: Types.listCommentRepliesQueryParams;
      };
      output: Types.listCommentRepliesResponse;
    };
    $post: {
      input: {
        param: Types.replyToCommentPathParams;
        json: Types.replyToCommentBody;
      };
      output: Types.replyToCommentResponse;
    };
  };
  '/products': {
    $get: {
      input: {
        query: Types.listProductsQueryParams;
      };
      output: Types.listProductsResponse;
    };
    $post: {
      input: {
        json: Types.createProductBody;
      };
      output: Types.createProductResponse;
    };
  };
  '/products/:productId': {
    $get: {
      input: {
        param: Types.getProductPathParams;
      };
      output: Types.getProductResponse;
    };
    $put: {
      input: {
        param: Types.replaceProductPathParams;
        json: Types.replaceProductBody;
      };
      output: Types.replaceProductResponse;
    };
    $patch: {
      input: {
        param: Types.updateProductPathParams;
        json: Types.updateProductBody;
      };
      output: Types.updateProductResponse;
    };
    $delete: {
      input: {
        param: Types.deleteProductPathParams;
      };
      output: void;
    };
  };
  '/products/:productId/reviews': {
    $get: {
      input: {
        param: Types.listProductReviewsPathParams;
        query: Types.listProductReviewsQueryParams;
      };
      output: Types.listProductReviewsResponse;
    };
    $post: {
      input: {
        param: Types.createProductReviewPathParams;
        json: Types.createProductReviewBody;
      };
      output: Types.createProductReviewResponse;
    };
  };
  '/products/:productId/variants': {
    $get: {
      input: {
        param: Types.listProductVariantsPathParams;
      };
      output: Types.listProductVariantsResponse;
    };
    $post: {
      input: {
        param: Types.createProductVariantPathParams;
        json: Types.createProductVariantBody;
      };
      output: Types.createProductVariantResponse;
    };
  };
  '/products/:productId/variants/:variantId': {
    $get: {
      input: {
        param: Types.getProductVariantPathParams;
      };
      output: Types.getProductVariantResponse;
    };
    $patch: {
      input: {
        param: Types.updateProductVariantPathParams;
        json: Types.updateProductVariantBody;
      };
      output: Types.updateProductVariantResponse;
    };
    $delete: {
      input: {
        param: Types.deleteProductVariantPathParams;
      };
      output: void;
    };
  };
  '/products/:productId/images': {
    $get: {
      input: {
        param: Types.listProductImagesPathParams;
      };
      output: Types.listProductImagesResponse;
    };
    $post: {
      input: {
        param: Types.uploadProductImagePathParams;
        json: Types.uploadProductImageBody;
      };
      output: Types.uploadProductImageResponse;
    };
  };
  '/orders': {
    $get: {
      input: {
        query: Types.listOrdersQueryParams;
      };
      output: Types.listOrdersResponse;
    };
    $post: {
      input: {
        json: Types.createOrderBody;
      };
      output: Types.createOrderResponse;
    };
  };
  '/orders/:orderId': {
    $get: {
      input: {
        param: Types.getOrderPathParams;
      };
      output: Types.getOrderResponse;
    };
    $patch: {
      input: {
        param: Types.updateOrderPathParams;
        json: Types.updateOrderBody;
      };
      output: Types.updateOrderResponse;
    };
    $delete: {
      input: {
        param: Types.deleteOrderPathParams;
      };
      output: void;
    };
  };
  '/orders/:orderId/cancel': {
    $post: {
      input: {
        param: Types.cancelOrderPathParams;
        json: Types.cancelOrderBody;
      };
      output: Types.cancelOrderResponse;
    };
  };
  '/orders/:orderId/ship': {
    $post: {
      input: {
        param: Types.shipOrderPathParams;
        json: Types.shipOrderBody;
      };
      output: Types.shipOrderResponse;
    };
  };
  '/orders/:orderId/refund': {
    $post: {
      input: {
        param: Types.refundOrderPathParams;
        json: Types.refundOrderBody;
      };
      output: Types.refundOrderResponse;
    };
  };
  '/orders/:orderId/items': {
    $get: {
      input: {
        param: Types.listOrderItemsPathParams;
      };
      output: Types.listOrderItemsResponse;
    };
    $post: {
      input: {
        param: Types.addOrderItemPathParams;
        json: Types.addOrderItemBody;
      };
      output: Types.addOrderItemResponse;
    };
  };
  '/orders/:orderId/items/:itemId': {
    $patch: {
      input: {
        param: Types.updateOrderItemPathParams;
        json: Types.updateOrderItemBody;
      };
      output: Types.updateOrderItemResponse;
    };
    $delete: {
      input: {
        param: Types.removeOrderItemPathParams;
      };
      output: void;
    };
  };
  '/categories': {
    $get: {
      input: {
        query: Types.listCategoriesQueryParams;
      };
      output: Types.listCategoriesResponse;
    };
    $post: {
      input: {
        json: Types.createCategoryBody;
      };
      output: Types.createCategoryResponse;
    };
  };
  '/categories/:categoryId': {
    $get: {
      input: {
        param: Types.getCategoryPathParams;
      };
      output: Types.getCategoryResponse;
    };
    $put: {
      input: {
        param: Types.replaceCategoryPathParams;
        json: Types.replaceCategoryBody;
      };
      output: Types.replaceCategoryResponse;
    };
    $patch: {
      input: {
        param: Types.updateCategoryPathParams;
        json: Types.updateCategoryBody;
      };
      output: Types.updateCategoryResponse;
    };
    $delete: {
      input: {
        param: Types.deleteCategoryPathParams;
      };
      output: void;
    };
  };
  '/categories/:categoryId/products': {
    $get: {
      input: {
        param: Types.listCategoryProductsPathParams;
        query: Types.listCategoryProductsQueryParams;
      };
      output: Types.listCategoryProductsResponse;
    };
  };
  '/categories/:categoryId/subcategories': {
    $get: {
      input: {
        param: Types.listSubcategoriesPathParams;
      };
      output: Types.listSubcategoriesResponse;
    };
  };
  '/reviews': {
    $get: {
      input: {
        query: Types.listReviewsQueryParams;
      };
      output: Types.listReviewsResponse;
    };
  };
  '/reviews/:reviewId': {
    $get: {
      input: {
        param: Types.getReviewPathParams;
      };
      output: Types.getReviewResponse;
    };
    $patch: {
      input: {
        param: Types.updateReviewPathParams;
        json: Types.updateReviewBody;
      };
      output: Types.updateReviewResponse;
    };
    $delete: {
      input: {
        param: Types.deleteReviewPathParams;
      };
      output: void;
    };
  };
  '/reviews/:reviewId/helpful': {
    $post: {
      input: {
        param: Types.markReviewHelpfulPathParams;
      };
      output: Types.markReviewHelpfulResponse;
    };
  };
  '/settings': {
    $get: {
      input: {
        query: Types.listSettingsQueryParams;
      };
      output: Types.listSettingsResponse;
    };
    $put: {
      input: {
        json: Types.bulkUpdateSettingsBody;
      };
      output: Types.bulkUpdateSettingsResponse;
    };
  };
  '/settings/:settingKey': {
    $get: {
      input: {
        param: Types.getSettingPathParams;
      };
      output: Types.getSettingResponse;
    };
    $put: {
      input: {
        param: Types.updateSettingPathParams;
        json: Types.updateSettingBody;
      };
      output: Types.updateSettingResponse;
    };
    $delete: {
      input: {
        param: Types.resetSettingPathParams;
      };
      output: Types.resetSettingResponse;
    };
  };
  '/tags': {
    $get: {
      input: {
        query: Types.listTagsQueryParams;
      };
      output: Types.listTagsResponse;
    };
    $post: {
      input: {
        json: Types.createTagBody;
      };
      output: Types.createTagResponse;
    };
  };
  '/tags/:tagId': {
    $get: {
      input: {
        param: Types.getTagPathParams;
      };
      output: Types.getTagResponse;
    };
    $patch: {
      input: {
        param: Types.updateTagPathParams;
        json: Types.updateTagBody;
      };
      output: Types.updateTagResponse;
    };
    $delete: {
      input: {
        param: Types.deleteTagPathParams;
      };
      output: void;
    };
  };
  '/tags/:tagId/posts': {
    $get: {
      input: {
        param: Types.listTagPostsPathParams;
        query: Types.listTagPostsQueryParams;
      };
      output: Types.listTagPostsResponse;
    };
  };
  '/media': {
    $get: {
      input: {
        query: Types.listMediaQueryParams;
      };
      output: Types.listMediaResponse;
    };
    $post: {
      input: {
        json: Types.uploadMediaBody;
      };
      output: Types.uploadMediaResponse;
    };
  };
  '/media/:mediaId': {
    $get: {
      input: {
        param: Types.getMediaPathParams;
      };
      output: Types.getMediaResponse;
    };
    $patch: {
      input: {
        param: Types.updateMediaPathParams;
        json: Types.updateMediaBody;
      };
      output: Types.updateMediaResponse;
    };
    $delete: {
      input: {
        param: Types.deleteMediaPathParams;
      };
      output: void;
    };
  };
  '/notifications': {
    $get: {
      input: {
        query: Types.listNotificationsQueryParams;
      };
      output: Types.listNotificationsResponse;
    };
  };
  '/notifications/mark-all-read': {
    $post: {
      input: {
      };
      output: void;
    };
  };
  '/notifications/:notificationId': {
    $get: {
      input: {
        param: Types.getNotificationPathParams;
      };
      output: Types.getNotificationResponse;
    };
    $patch: {
      input: {
        param: Types.updateNotificationPathParams;
        json: Types.updateNotificationBody;
      };
      output: Types.updateNotificationResponse;
    };
    $delete: {
      input: {
        param: Types.deleteNotificationPathParams;
      };
      output: void;
    };
  };
  '/analytics/overview': {
    $get: {
      input: {
        query: Types.getAnalyticsOverviewQueryParams;
      };
      output: Types.getAnalyticsOverviewResponse;
    };
  };
  '/analytics/sales': {
    $get: {
      input: {
        query: Types.getSalesAnalyticsQueryParams;
      };
      output: Types.getSalesAnalyticsResponse;
    };
  };
  '/analytics/users': {
    $get: {
      input: {
        query: Types.getUserAnalyticsQueryParams;
      };
      output: Types.getUserAnalyticsResponse;
    };
  };
  '/analytics/products/top': {
    $get: {
      input: {
        query: Types.getTopProductsQueryParams;
      };
      output: Types.getTopProductsResponse;
    };
  };
  '/analytics/export': {
    $post: {
      input: {
        json: Types.exportAnalyticsBody;
      };
      output: Types.exportAnalyticsResponse;
    };
  };
  '/auth/login': {
    $post: {
      input: {
        json: Types.loginBody;
      };
      output: Types.loginResponse;
    };
  };
  '/auth/register': {
    $post: {
      input: {
        json: Types.registerBody;
      };
      output: Types.registerResponse;
    };
  };
  '/auth/refresh': {
    $post: {
      input: {
        json: Types.refreshTokenBody;
      };
      output: Types.refreshTokenResponse;
    };
  };
  '/auth/logout': {
    $post: {
      input: {
      };
      output: void;
    };
  };
  '/auth/password/reset': {
    $post: {
      input: {
        json: Types.requestPasswordResetBody;
      };
      output: void;
    };
  };
  '/auth/password/reset/:token': {
    $post: {
      input: {
        param: Types.resetPasswordPathParams;
        json: Types.resetPasswordBody;
      };
      output: void;
    };
  };
  '/auth/me': {
    $get: {
      input: {
      };
      output: Types.getCurrentUserResponse;
    };
  };
  '/search': {
    $get: {
      input: {
        query: Types.globalSearchQueryParams;
      };
      output: Types.globalSearchResponse;
    };
  };
  '/health': {
    $get: {
      input: {
      };
      output: Types.healthCheckResponse;
    };
  };
  '/webhooks': {
    $get: {
      input: {
      };
      output: Types.listWebhooksResponse;
    };
    $post: {
      input: {
        json: Types.createWebhookBody;
      };
      output: Types.createWebhookResponse;
    };
  };
  '/webhooks/:webhookId': {
    $get: {
      input: {
        param: Types.getWebhookPathParams;
      };
      output: Types.getWebhookResponse;
    };
    $patch: {
      input: {
        param: Types.updateWebhookPathParams;
        json: Types.updateWebhookBody;
      };
      output: Types.updateWebhookResponse;
    };
    $delete: {
      input: {
        param: Types.deleteWebhookPathParams;
      };
      output: void;
    };
  };
  '/webhooks/:webhookId/test': {
    $post: {
      input: {
        param: Types.testWebhookPathParams;
      };
      output: Types.testWebhookResponse;
    };
  };
};
