crates/emitter-hono/tests/snapshots/snapshots__snapshot_multipart_paginated_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/upload': {
    $post: {
      input: {
        json: Types.uploadFileBody;
      };
      output: Types.uploadFileResponse;
    };
  };
  '/items': {
    $get: {
      input: {
        query: Types.listItemsQueryParams;
      };
      output: Types.listItemsResponse;
    };
  };
  '/cursored': {
    $get: {
      input: {
        query: Types.listCursoredQueryParams;
      };
      output: Types.listCursoredResponse;
    };
  };
  '/text-upload': {
    $put: {
      input: {
        json: Types.updateTextBody;
      };
      output: void;
    };
  };
};
