crates/emitter-hono/tests/snapshots/snapshots__snapshot_petstore_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/pets': {
    $get: {
      input: {
        query: Types.listPetsQueryParams;
      };
      output: Types.listPetsResponse;
    };
    $post: {
      input: {
        json: Types.createPetBody;
      };
      output: Types.createPetResponse;
    };
  };
  '/pets/:petId': {
    $get: {
      input: {
        param: Types.getPetPathParams;
      };
      output: Types.getPetResponse;
    };
    $delete: {
      input: {
        param: Types.deletePetPathParams;
      };
      output: void;
    };
  };
};
