crates/emitter-hono/tests/snapshots/snapshots__snapshot_reserved_keywords_hono.snap
---
source: crates/emitter-hono/tests/snapshots.rs
expression: emit_hono(yaml)
---
// Generated by oa-forge. Do not edit.

import type * as Types from './types.gen';

export type AppType = {
  '/items': {
    $get: {
      input: {
      };
      output: Types.listItemsResponse;
    };
    $post: {
      input: {
        json: Types.createItemBody;
      };
      output: Types.createItemResponse;
    };
  };
};
